# gsvit_copy

./: AUTHORS  INSTALL  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac  gsvit.spec  gsvit.spec.in
src2d/: 1dpool.c  1dpool.h  Makefile.am  Makefile.in  boundary.c  boundary.h  constants.h  dcube.c  dcube.h  dline.c  dline.h  farfield.c  farfield.h  fcube.c  fcube.h  gpu.c  gpu.h  gpu_kernels.cu  gpu_kernels.h  icube.c  icube.h  output.c  output.h  plan.c  plan.h  pool.c  pool.h  settings.c  settings.h  source.c  source.h  svit2d.c
src3d/: 1dpool.c  1dpool.h  Makefile.am  Makefile.in  boundary.c  boundary.h  constants.h  dcube.c  dcube.h  defaults.h  dline.c  dline.h  farfield.c  farfield.h  fcube.c  fcube.h  global.c  global.h  gpu.c  gpu.h  gpu_kernels.cu  gpu_kernels.h  icube.c  icube.h  messages.h  modifiers.c  modifiers.h  output.c  output.h  pfarfield.c  pfarfield.h  plan.c  plan.h  pool.c  pool.h  settings.c  settings.h  source.c  source.h  subgrid.c  (+28 more)
tests/: Makefile.am  Makefile.in  tests_description
tests/selftests/: 10000000  10005021  10020003  10020004  10021100  10022100  10023100  10024100  10025002  10025003  10026000  10027000  10028000  10029000  10031010  10031111  10035011  20000000  20000021  20005021  20020003  20021100  20022100  20023100  20024100  20025002  20025003  20026000  20027000  20028000  20029000  20031010  20031111  20035011  Makefile.am  Makefile.in
tests/test01/: Makefile.am  Makefile.in  test01.par  test01_point_log  xsource.txt
tests/test02/: Makefile.am  Makefile.in  pecsphere.txt  test02.par  test02_pointx_log  test02_pointy_log  test02_pointz_log  tsfpulse.txt
tests/test03/: Makefile.am  Makefile.in  test03.par  test03_pointx_log  test03_pointy_log  test03_pointz_log
tests/test04/: Makefile.am  Makefile.in  test04.par  test04_ffpoint_log  test04_nfpoint_log  xpulse.txt
tests/test05/: Makefile.am  Makefile.in  halfspace.txt  test05.par  test05_point_log  xpulse.txt
tests/test06/: Makefile.am  Makefile.in  test06.par  test06_point_log
