selftestdir=$(datadir)/gsvit/tests/selftests

selftest_DATA=	10000000\
                10021100\
                10023100\
		10022100\
                10024100\
                10025002\
                10026000\
                10020003\
                10027000\
                10028000\
                10029000\
                10035011\
                10031010\
                10031111\
                10005021\
                10025003\
		10020004\
                20000000\
		20000021\
                20021100\
                20023100\
     		20022100\
                20024100\
                20025002\
                20026000\
                20027000\
                20035011\
                20031010\
                20031111\
                20005021\
		20025003\
		20028000\
		20029000\
                20020003

EXTRA_DIST = $(selftest_DATA)

